--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         const qrcodeContainer = document.getElementById('qrcode-container');
         qrcodeContainer.innerHTML = '';
-        qrcode.append(document.getElementById('qrcode-container'));
+        qrCode.append(document.getElementById('qrcode-container'));
     }
 </script>
 
