--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0;
             margin: 0;
             display: flex;
             align-items: center;
@@ -50,7 +50,7 @@
         }
 
         #form-container button {
-            background-color: #4caf50;
+            background-color: #e74c3c;
             color: #fff;
             padding: 12px 20px;
             border: none;
@@ -61,7 +61,7 @@
         }
 
         #form-container button:hover {
-            background-color: #45a049;
+            background-color: #c0392b;
         }
 
         #qrcode-container {
