--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            margin-top: auto; /* Move the container to the bottom */
-            margin-bottom: 20px; /* Add margin at the bottom */
+            margin-top: 20px; /* Move the container to the bottom */
+            margin-bottom: auto; /* Add margin at the bottom */
         }
 
         #form-container,
