--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
     <script src="./dist/paynowqr.umd.js"></script>
+    <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
+
 </head>
 <body>
 
@@ -152,7 +154,16 @@
         refNumberText.textContent = `Reference Number: ${refNumber}`;
         qrcodeContainer.appendChild(refNumberText);
 
+        const downloadButton = document.createElement('button');
+        downloadButton.textContent = 'Download as PDF';
+        downloadButton.addEventListener('click', () => downloadAsPDF(qrcodeContainer));
+        qrcodeContainer.appendChild(downloadButton);
     }
+
+    function downloadAsPDF(container) {
+        html2pdf(container);
+    }
+
 </script>
 
 </body>
