--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
     <script src="./dist/paynowqr.umd.js"></script>
     <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
 
 </head>
 <body>
@@ -167,12 +169,10 @@
     }
 
     function downloadAsPDF(container) {
-        html2pdf(container, {
-            margin: 10,
-            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' },
-            callback: function (pdf) {
-                pdf.save('qrcode.pdf');
-            }
+        html2canvas(container, { scale: 2 }).then(canvas => {
+            const pdf = new jsPDF('p', 'mm', 'a4');
+            pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 210, 297);
+            pdf.save('qrcode.pdf');
         });
     }
 
