--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
             margin-top: 20px;
             margin-bottom: 0; /* Remove bottom margin for the QR code */
         }
+
+        #qrcode-container p {
+            font-size: 16px;
+            color: #333;
+            margin-top: 10px;
+        }
+        
     </style>
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
     <script src="./dist/paynowqr.umd.js"></script>
