--- a/index.html
+++ b/index.html
@@ -160,6 +160,21 @@
         const refNumberText = document.createElement('p');
         refNumberText.textContent = `Reference Number: ${refNumber}`;
         qrcodeContainer.appendChild(refNumberText);
+
+
+        qrcodeContainer.toBlob((blob) => {
+
+        const link = document.createElement('a');
+        link.href = URL.createObjectURL(blob);
+        link.download = 'qrcode.png';  // Set the desired file name
+
+          
+        document.body.appendChild(link);
+        link.click();
+
+
+        document.body.removeChild(link);
+            });
         
     }
 
