--- a/index.html
+++ b/index.html
@@ -168,4 +168,28 @@
         qrcodeContainer.appendChild(refNumberText);
 
         // Show the download button after QR code generation
-        document.getElementById('downloa
+        document.getElementById('downloadButton').style.display = 'block';
+    }
+
+    function downloadQRCode() {
+        const qrcodeContainer = document.getElementById('qrcode-container');
+        const canvas = document.createElement('canvas');
+        canvas.width = qrcodeContainer.clientWidth;
+        canvas.height = qrcodeContainer.clientHeight;
+        const ctx = canvas.getContext('2d');
+
+        html2canvas(qrcodeContainer).then((canvas) => {
+            canvas.toBlob((blob) => {
+                const link = document.createElement('a');
+                link.href = URL.createObjectURL(blob);
+                link.download = 'qrcode.png';
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+            });
+        });
+    }
+</script>
+
+</body>
+</html>
