--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
     <button id="downloadButton" type="button" onclick="downloadQRCode()">Download QR Code</button>
   </div>
 
+  <!-- Anchor tag to navigate to the second page -->
+  <footer>
+    <a href="page2.html">Go to Page 2</a>
+  </footer>
+
 <script>
     function generateQRCode() {
         const uen = document.getElementById('uen').value;
@@ -189,9 +194,6 @@
             });
         });
     }
-
-    <a href="upload.html">Upload CSV</a>
-    
 </script>
 
 </body>
