--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f0f0;
             margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            padding: 0;
+        }
+
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            padding: 10px 0;
+        }
+
+        .navbar a {
+            float: right;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+            font-size: 17px;
         }
 
         .container {
             display: flex;
-            flex-direction: column; /* Change to column layout */
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: center;
-            margin-top: 20px; /* Move the container to the bottom */
-            margin-bottom: auto; /* Add margin at the bottom */
+            margin-top: 20px;
         }
 
         #form-container,
@@ -71,7 +82,7 @@
         #qrcode-container {
             width: 300px;
             margin-top: 20px;
-            margin-bottom: 0; /* Remove bottom margin for the QR code */
+            margin-bottom: 0;
         }
 
         #qrcode-container p {
@@ -81,16 +92,20 @@
         }
 
         #downloadButton {
-            display: none; /* Initially hide the button */
-            margin-top: 10px; /* Add margin for spacing */
+            display: none;
+            margin-top: 10px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
-    <script src="./dist/paynowqr.umd.js"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <!-- Include your scripts here -->
 </head>
 <body>
 
+  <!-- Navigation bar -->
+  <div class="navbar">
+    <a href="upload.html">Upload CSV</a>
+  </div>
+
+  <!-- Main content -->
   <div class="container">
     <div id="form-container">
       <form id="payNowForm">
@@ -127,11 +142,6 @@
     <!-- Add a button to trigger download -->
     <button id="downloadButton" type="button" onclick="downloadQRCode()">Download QR Code</button>
   </div>
-
-  <!-- Anchor tag to navigate to the second page -->
-  <footer>
-    <a href="page2.html">Go to Page 2</a>
-  </footer>
 
 <script>
     function generateQRCode() {
