--- a/upload.html
+++ b/upload.html
@@ -91,52 +91,36 @@
 </head>
 <body>
 
-  <div class="container">
-    <div id="form-container">
-      <form id="payNowForm">
-        <label for="uen">UEN (UEN of company):</label>
-        <input type="text" id="uen" name="uen" required>
-        <br>
-
-        <label for="amount">Amount to Pay:</label>
-        <input type="number" id="amount" name="amount" required>
-        <br>
-
-        <label for="editable">Allow Editing of Amount:</label>
-        <input type="checkbox" id="editable" name="editable">
-        <br>
-
-        <label for="expiry">Expiry Date (YYYYMMDD):</label>
-        <input type="text" id="expiry" name="expiry">
-        <br>
-
-        <label for="refNumber">Reference Number:</label>
-        <input type="text" id="refNumber" name="refNumber">
-        <br>
-
-        <label for="company">Company Name:</label>
-        <input type="text" id="company" name="company">
-        <br>
-
-        <button type="button" onclick="generateQRCode()">Generate QR Code</button>
-      </form>
-    </div>
+<div class="container">
+    <input type="file" id="csvFile" accept=".csv">
+    <button type="button" onclick="handleCSVUpload()">Upload CSV</button>
 
     <div id="qrcode-container"></div>
 
     <!-- Add a button to trigger download -->
     <button id="downloadButton" type="button" onclick="downloadQRCode()">Download QR Code</button>
-  </div>
+</div>
 
 <script>
-    function generateQRCode() {
-        const uen = document.getElementById('uen').value;
-        const amount = parseFloat(document.getElementById('amount').value);
-        const editable = document.getElementById('editable').checked;
-        const expiry = document.getElementById('expiry').value;
-        const refNumber = document.getElementById('refNumber').value;
-        const company = document.getElementById('company').value;
+    function handleCSVUpload() {
+        const fileInput = document.getElementById('csvFile');
+        const file = fileInput.files[0];
+        const reader = new FileReader();
 
+        reader.onload = function(event) {
+            const csvData = event.target.result;
+            const lines = csvData.split(/\r\n|\n/);
+
+            lines.forEach(line => {
+                const [uen, amount, editable, expiry, refNumber, company] = line.split(',');
+                generateQRCode(uen, parseFloat(amount), editable === 'true', expiry, refNumber, company);
+            });
+        };
+
+        reader.readAsText(file);
+    }
+
+    function generateQRCode(uen, amount, editable, expiry, refNumber, company) {
         const qrCode = new PaynowQR({
             uen: uen,
             amount: amount,
