--- a/upload.html
+++ b/upload.html
@@ -26,12 +26,23 @@
         }
 
         #qrcode-container {
-            width: 300px;
-            margin-top: 20px;
-            margin-bottom: 0; /* Remove bottom margin for the QR code */
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
         }
 
-        #qrcode-container p {
+        .qr-code {
+            margin: 20px;
+            text-align: center;
+        }
+
+        .qr-code canvas {
+            width: 300px;
+            height: 300px;
+        }
+
+        .qr-code p {
             font-size: 16px;
             color: #333;
             margin-top: 5px;
@@ -66,7 +77,7 @@
 
     <div id="qrcode-container"></div>
 
-    <button id="downloadButton" type="button" onclick="downloadQRCode()">Download QR Code</button>
+    <button id="downloadButton" type="button" onclick="downloadAllQRCode()">Download All QR Codes</button>
 </div>
 
 <script>
@@ -112,32 +123,37 @@
         });
 
         const qrcodeContainer = document.getElementById('qrcode-container');
-        qrcodeContainer.innerHTML = '';
-        styledQRCode.append(qrcodeContainer);
+
+        const qrCodeDiv = document.createElement('div');
+        qrCodeDiv.classList.add('qr-code');
+        qrcodeContainer.appendChild(qrCodeDiv);
+
+        styledQRCode.append(qrCodeDiv);
 
         const refNumberText = document.createElement('p');
         refNumberText.textContent = `Reference Number: ${refNumber}`;
-        qrcodeContainer.appendChild(refNumberText);
-
-        // Show the download button after QR code generation
-        document.getElementById('downloadButton').style.display = 'block';
+        qrCodeDiv.appendChild(refNumberText);
     }
 
-    function downloadQRCode() {
+    function downloadAllQRCode() {
         const qrcodeContainer = document.getElementById('qrcode-container');
-        const canvas = document.createElement('canvas');
-        canvas.width = qrcodeContainer.clientWidth;
-        canvas.height = qrcodeContainer.clientHeight;
-        const ctx = canvas.getContext('2d');
+        const qrCodes = qrcodeContainer.querySelectorAll('.qr-code');
 
-        html2canvas(qrcodeContainer).then((canvas) => {
-            canvas.toBlob((blob) => {
-                const link = document.createElement('a');
-                link.href = URL.createObjectURL(blob);
-                link.download = 'qrcode.png';
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
+        qrCodes.forEach((qrCode, index) => {
+            const canvas = document.createElement('canvas');
+            canvas.width = qrCode.clientWidth;
+            canvas.height = qrCode.clientHeight;
+            const ctx = canvas.getContext('2d');
+
+            html2canvas(qrCode).then((canvas) => {
+                canvas.toBlob((blob) => {
+                    const link = document.createElement('a');
+                    link.href = URL.createObjectURL(blob);
+                    link.download = `qrcode_${index}.png`;
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                });
             });
         });
     }
