--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
         #form-container,
         #qrcode-container {
-            display: none; /* Initially hidden */
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -46,6 +45,7 @@
             width: 300px;
             margin: 20px;
             text-align: center;
+            display: block; /* Make sure the containers are visible */
         }
 
         #form-container label {
@@ -184,9 +184,6 @@
         const refNumberText = document.createElement('p');
         refNumberText.textContent = `Reference Number: ${refNumber}`;
         qrcodeContainer.appendChild(refNumberText);
-
-        // Show the QR code container after QR code generation
-        qrcodeContainer.style.display = 'block';
 
         // Show the download button after QR code generation
         document.getElementById('downloadButton').style.display = 'block';
