--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             width: 300px;
             margin: 20px;
             text-align: center;
-            display: none; /* Initially hidden */
         }
 
         #form-container label {
@@ -84,6 +83,7 @@
             width: 300px;
             margin-top: 20px;
             margin-bottom: 0;
+            display: none; /* Initially hidden */
         }
 
         #qrcode-container p {
@@ -138,7 +138,7 @@
       </form>
     </div>
 
-    <div id="qrcode-container" style="display: none;">
+    <div id="qrcode-container">
       <!-- QR code will be generated here -->
     </div>
 
