--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
         .container {
             display: flex;
-            flex-direction: column; /* Change to column layout */
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: center;
-            margin-top: 20px; /* Move the container to the bottom */
-            margin-bottom: auto; /* Add margin at the bottom */
+            margin-top: 20px;
+            margin-bottom: auto;
         }
 
         #form-container,
@@ -71,7 +71,7 @@
         #qrcode-container {
             width: 300px;
             margin-top: 20px;
-            margin-bottom: 0; /* Remove bottom margin for the QR code */
+            margin-bottom: 0;
         }
 
         #qrcode-container p {
@@ -81,115 +81,147 @@
         }
 
         #downloadButton {
-            display: none; /* Initially hide the button */
-            margin-top: 10px; /* Add margin for spacing */
+            display: none;
+            margin-top: 10px;
+        }
+
+        nav {
+            background-color: #333;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav ul li a:hover {
+            color: #ccc;
         }
     </style>
+</head>
+<body>
+    <!-- Navigation bar -->
+    <nav>
+        <ul>
+            <li><a href="upload.html">Upload</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <div id="form-container">
+            <form id="payNowForm">
+                <label for="uen">UEN (UEN of company):</label>
+                <input type="text" id="uen" name="uen" required>
+                <br>
+
+                <label for="amount">Amount to Pay:</label>
+                <input type="number" id="amount" name="amount" required>
+                <br>
+
+                <label for="editable">Allow Editing of Amount:</label>
+                <input type="checkbox" id="editable" name="editable">
+                <br>
+
+                <label for="expiry">Expiry Date (YYYYMMDD):</label>
+                <input type="text" id="expiry" name="expiry">
+                <br>
+
+                <label for="refNumber">Reference Number:</label>
+                <input type="text" id="refNumber" name="refNumber">
+                <br>
+
+                <label for="company">Company Name:</label>
+                <input type="text" id="company" name="company">
+                <br>
+
+                <button type="button" onclick="generateQRCode()">Generate QR Code</button>
+            </form>
+        </div>
+
+        <div id="qrcode-container"></div>
+
+        <!-- Add a button to trigger download -->
+        <button id="downloadButton" type="button" onclick="downloadQRCode()">Download QR Code</button>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
     <script src="./dist/paynowqr.umd.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-</head>
-<body>
+    <script>
+        function generateQRCode() {
+            const uen = document.getElementById('uen').value;
+            const amount = parseFloat(document.getElementById('amount').value);
+            const editable = document.getElementById('editable').checked;
+            const expiry = document.getElementById('expiry').value;
+            const refNumber = document.getElementById('refNumber').value;
+            const company = document.getElementById('company').value;
 
-  <div class="container">
-    <div id="form-container">
-      <form id="payNowForm">
-        <label for="uen">UEN (UEN of company):</label>
-        <input type="text" id="uen" name="uen" required>
-        <br>
-
-        <label for="amount">Amount to Pay:</label>
-        <input type="number" id="amount" name="amount" required>
-        <br>
-
-        <label for="editable">Allow Editing of Amount:</label>
-        <input type="checkbox" id="editable" name="editable">
-        <br>
-
-        <label for="expiry">Expiry Date (YYYYMMDD):</label>
-        <input type="text" id="expiry" name="expiry">
-        <br>
-
-        <label for="refNumber">Reference Number:</label>
-        <input type="text" id="refNumber" name="refNumber">
-        <br>
-
-        <label for="company">Company Name:</label>
-        <input type="text" id="company" name="company">
-        <br>
-
-        <button type="button" onclick="generateQRCode()">Generate QR Code</button>
-      </form>
-    </div>
-
-    <div id="qrcode-container"></div>
-
-    <!-- Add a button to trigger download -->
-    <button id="downloadButton" type="button" onclick="downloadQRCode()">Download QR Code</button>
-  </div>
-
-<script>
-    function generateQRCode() {
-        const uen = document.getElementById('uen').value;
-        const amount = parseFloat(document.getElementById('amount').value);
-        const editable = document.getElementById('editable').checked;
-        const expiry = document.getElementById('expiry').value;
-        const refNumber = document.getElementById('refNumber').value;
-        const company = document.getElementById('company').value;
-
-        const qrCode = new PaynowQR({
-            uen: uen,
-            amount: amount,
-            editable: editable,
-            expiry: expiry,
-            refNumber: refNumber,
-            company: company
-        });
-
-        const QRstring = qrCode.output();
-
-        const styledQRCode = new QRCodeStyling({
-            width: 300,
-            height: 300,
-            data: QRstring,
-            image: 'https://i.imgur.com/ipaIiBl.png',
-            imageOptions: {
-                crossOrigin: 'anonymous',
-                margin: 0,
-            },
-        });
-
-        const qrcodeContainer = document.getElementById('qrcode-container');
-        qrcodeContainer.innerHTML = '';
-        styledQRCode.append(qrcodeContainer);
-
-        const refNumberText = document.createElement('p');
-        refNumberText.textContent = `Reference Number: ${refNumber}`;
-        qrcodeContainer.appendChild(refNumberText);
-
-        // Show the download button after QR code generation
-        document.getElementById('downloadButton').style.display = 'block';
-    }
-
-    function downloadQRCode() {
-        const qrcodeContainer = document.getElementById('qrcode-container');
-        const canvas = document.createElement('canvas');
-        canvas.width = qrcodeContainer.clientWidth;
-        canvas.height = qrcodeContainer.clientHeight;
-        const ctx = canvas.getContext('2d');
-
-        html2canvas(qrcodeContainer).then((canvas) => {
-            canvas.toBlob((blob) => {
-                const link = document.createElement('a');
-                link.href = URL.createObjectURL(blob);
-                link.download = 'qrcode.png';
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
+            const qrCode = new PaynowQR({
+                uen: uen,
+                amount: amount,
+                editable: editable,
+                expiry: expiry,
+                refNumber: refNumber,
+                company: company
             });
-        });
-    }
-</script>
 
+            const QRstring = qrCode.output();
+
+            const styledQRCode = new QRCodeStyling({
+                width: 300,
+                height: 300,
+                data: QRstring,
+                image: 'https://i.imgur.com/ipaIiBl.png',
+                imageOptions: {
+                    crossOrigin: 'anonymous',
+                    margin: 0,
+                },
+            });
+
+            const qrcodeContainer = document.getElementById('qrcode-container');
+            qrcodeContainer.innerHTML = '';
+            styledQRCode.append(qrcodeContainer);
+
+            const refNumberText = document.createElement('p');
+            refNumberText.textContent = `Reference Number: ${refNumber}`;
+            qrcodeContainer.appendChild(refNumberText);
+
+            // Show the download button after QR code generation
+            document.getElementById('downloadButton').style.display = 'block';
+        }
+
+        function downloadQRCode() {
+            const qrcodeContainer = document.getElementById('qrcode-container');
+            const canvas = document.createElement('canvas');
+            canvas.width = qrcodeContainer.clientWidth;
+            canvas.height = qrcodeContainer.clientHeight;
+            const ctx = canvas.getContext('2d');
+
+            html2canvas(qrcodeContainer).then((canvas) => {
+                canvas.toBlob((blob) => {
+                    const link = document.createElement('a');
+                    link.href = URL.createObjectURL(blob);
+                    link.download = 'qrcode.png';
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                });
+            });
+        }
+    </script>
 </body>
 </html>
