--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
     <!-- Navigation bar -->
     <nav>
-        <a href="upload.html">Upload</a>
+        <a href="upload.html">Upload CSV</a>
     </nav>
 
     <div id="content-container" class="container">
