--- a/upload.html
+++ b/upload.html
@@ -88,6 +88,11 @@
             font-size: 14px;
             color: #555;
         }
+
+        #downloadCSVButton {
+            margin-bottom: 10px;
+        }
+        
     </style>
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling"></script>
     <script src="./dist/paynowqr.umd.js"></script>
